<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="20dp"
    tools:context=".UI.View.Fragments.FragmentCreateFolder">

    <TextView
        android:id="@+id/lblNameYourFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNameYourFolder"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:autofillHints="Nombre de carpetas"
        android:background="@drawable/bg_edittext_create_folder"
        android:gravity="center_vertical"
        android:hint="@string/lblNameYourFolder"
        android:textColorHint="@color/bg_edittext"
        android:inputType="textCapWords"
        android:labelFor="@+id/editTextNombres"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNameYourFolder" />

    <TextView
        android:id="@+id/lblSelectIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblSelectIcon"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIconos"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectIcon" />

    <TextView
        android:id="@+id/lblPickColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblPickColor"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvIconos"/>

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        app:initialColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPickColor"/>

    <TextView
        android:id="@+id/lblPickedColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btnColorAct"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vColorPicked"
        app:layout_constraintBottom_toBottomOf="@+id/vColorPicked"/>

    <View
        android:id="@+id/vColorPicked"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#04E2CE"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/lblPickedColor"
        app:layout_constraintTop_toBottomOf="@+id/colorPickerView"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateFolder"
        style="@style/btnCrearGuia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_filter_state_crear_guia"
        android:layoutDirection="ltr"
        android:text="@string/btnAplicar"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>