<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_Cuestionario">

    <include
        android:id="@+id/barra_superior_regreso"
        layout="@layout/barra_superior_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContenidoPregunta"
        android:labelFor="@+id/tvContenidoPregunta"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/barra_superior_regreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPregunta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="testHint"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:scrollbars="vertical"
            android:hint="@string/etContenidoPregunta"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContenidoRespuesta"
        android:labelFor="@+id/tvContenidoPregunta"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/tilContenidoPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRespuesta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="testHint"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:scrollbars="vertical"
            android:hint="@string/etContenidoRespuesta"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSiguientePregunta"
        android:text="@string/btnSiguiente"
        app:layout_constraintTop_toBottomOf="@+id/tilContenidoRespuesta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardarGuia"
        style="@style/btnGenerales"/>

    <Button
        android:id="@+id/btnGuardarGuia"
        android:text="@string/btnGuardarGuia"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/tilContenidoRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSiguientePregunta"
        style="@style/btnGenerales"/>

    <Button
        android:id="@+id/btnGuardarGuiaInhabilitado"
        android:text="@string/btnGuardarGuia"
        app:layout_constraintTop_toBottomOf="@+id/tilContenidoRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSiguientePregunta"
        style="@style/btnInhabilitado"/>

</androidx.constraintlayout.widget.ConstraintLayout>