<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonathanev.review.Activities.Activity_RepasarGuia">

    <include
        android:id="@+id/barra_superior_regreso"
        layout="@layout/barra_superior_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPregResp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="42dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/barra_superior_regreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAtrasPregunta">

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutBtnsCuestionario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvPregResp"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ic_preg_resp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContenidoPregResp"
                android:labelFor="@+id/tvContenidoPregResp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/etPregunta"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPregResp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="testHint"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"
                    android:scrollbars="vertical"
                    android:textSize="18sp"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--style="@style/btnGenerales"-->
    <Button
        android:id="@+id/btnAtrasPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btnAtras"
        android:background="@drawable/ic_filter_state"
        style="@style/btnGeneral"
        app:layout_constraintTop_toBottomOf="@+id/cvPregResp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSiguientePregunta"
        app:layout_constraintBottom_toTopOf="@+id/adView"/>

    <!--style="@style/btnGenerales"-->
    <Button
        android:id="@+id/btnSiguientePregunta"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btnSiguiente"
        android:background="@drawable/ic_filter_state"
        style="@style/btnGeneral"
        app:layout_constraintTop_toBottomOf="@+id/cvPregResp"
        app:layout_constraintStart_toEndOf="@+id/btnAtrasPregunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adView"/>

    <!--style="@style/btnGenerales"-->
    <!-- <Button
        android:id="@+id/btnMostrarRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btnMostrarRespuesta"
        android:background="@drawable/ic_filter_state"
        style="@style/btnGeneral"
        app:layout_constraintTop_toBottomOf="@+id/btnAtrasPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" /> -->

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>